* core: add "hdata" (direct access to WeeChat/plugin data)
* core: add option weechat.look.eat_newline_glitch (do not add new line at end
  of each line displayed)
* core: add options "infolists", "hdata" and "tags" for command /debug
* core: add horizontal scrolling for buffers with free content (command
  /window scroll_horiz) (task #11112)
* api: add info "cursor_mode"
* api: add new functions hook_focus, hdata_new, hdata_new_var, hdata_new_list,
  hdata_get, hdata_get_var_offset, hdata_get_var_type,
  hdata_get_var_type_string, hdata_get_var_hdata, hdata_get_var,
  hdata_get_var_at_offset, hdata_get_list, hdata_move, hdata_integer,
  hdata_string, hdata_pointer, hdata_time, hdata_get_string
* api: fix bug with function config_set_desc_plugin (use immediately
  description for option when function is called)
* irc: send WHO command to check away nicks only if channel was not parted
* irc: fix crash when malformed IRC message 352 (WHO) is received (bug #33790)
* irc: fix crash when command "/buffer close" is used in a server command to
  close server buffer during connection (bug #33763)
* irc: fix crash when /join command is executed on a non-irc buffer (bug #33742)
* irc: fix bug with comma in irc color code: do not strip comma if it is not
  followed by a digit (bug #33662)
* irc: add prefix "#" for all channels on join (if no prefix given)
* irc: switch to buffer on /join #channel if channel buffer already exists
* irc: update host of nicks on manual /who
* irc: fix memory leak on plugin unload (free ignores)
* irc: fix memory leak in message parser (when called from other plugins like
  relay) (bug #33387)
* relay: fix bug with self nick when someone changes its nick on channel
  (bug #33739)
* relay: fix memory leak (free some parsed messages) (bug #33387)
* relay: fix memory leak on plugin load (free raw messages)
* logger: add option logger.file.flush_delay (task #11118)

Version 0.3.5 (2011-05-15)
--------------------------
