@@ -56,7 +56,7 @@
 
 | weechat | plugin | Auflistung der Erweiterungen | Pointer der Erweiterung (optional) | Name einer Erweiterung (darf mit einem "*" als Platzhalter beginnen oder enden) (optional)
 
-| weechat | window | Auflistung der Windows | Fenster Pointer (optional) | Fenstername (darf mit einem "*" als Platzhalter beginnen oder enden) (optional)
+| weechat | window | Auflistung der Windows | Fenster Pointer (optional) | "current" for current window or a window number (optional)
 
 | xfer | xfer | Transfer-Liste | Transfer-Pointer (optional) | -
 
