@@ -56,7 +56,7 @@
 
 | weechat | plugin | elenco dei plugin | puntatore al plugin (opzionale) | nome plugin (può iniziare o terminare con "*" come carattere jolly) (opzionale)
 
-| weechat | window | elenco delle finestre | puntatore alla finestra (opzionale) | nome finestra (può iniziare o terminare con "*" come carattere jolly) (opzionale)
+| weechat | window | elenco delle finestre | puntatore alla finestra (opzionale) | "current" for current window or a window number (optional)
 
 | xfer | xfer | lista di xfer | puntatore a xfer (opzionale) | -
 
